cmake_minimum_required(VERSION 3.23)
project(GSSS_DS2_B4)

set(CMAKE_CXX_STANDARD 23)

add_executable(GSSS_DS2_B4 main.cpp)
add_executable(GSSS_DS2_B4_0 CAndCPPDiff.cpp)
add_executable(GSSS_DS2_B4_1 PaddingAndGreedyAlignment.cpp)
add_executable(GSSS_DS2_B4_2 DataStructures/SinglyLinkedListImplementation.cpp)
add_executable(GSSS_DS2_B4_3 InterviewQuestions/AliceAndFriends.cpp)
add_executable(GSSS_DS2_B4_4 DataStructures/StackUsingLinkedList.cpp)
add_executable(GSSS_DS2_B4_5 Algorithms/KadaneAlgo.cpp)
add_executable(GSSS_DS2_B4_6 Algorithms/MaxNumberFromAString.cpp)
add_executable(GSSS_DS2_B4_7 InterviewQuestions/QueueReversal.cpp)
add_executable(GSSS_DS2_B4_8 DataStructures/BinaryTreeImplementation.cpp)
add_executable(GSSS_DS2_B4_9 InterviewQuestions/IdenticalTrees.cpp)
add_executable(GSSS_DS2_B4_10 InterviewQuestions/FixedPointInArray.cpp)
add_executable(GSSS_DS2_B4_11 InterviewQuestions/CountSetBitsTillNElements.cpp)
add_executable(GSSS_DS2_B4_12 InterviewQuestions/SudokuSolver.cpp)
add_executable(GSSS_DS2_B4_13 DataStructures/BinarySearchTreeImplementation.cpp)
add_executable(GSSS_DS2_B4_14 DataStructures/BFSInBST.cpp)
add_executable(GSSS_DS2_B4_15 InterviewQuestions/SortedArrayToBST.cpp)
add_executable(GSSS_DS2_B4_16 DataStructures/TrieDataStructure.cpp)
add_executable(GSSS_DS2_B4_17 DataStructures/PriorityQueues/PriorityQueueSTL.cpp)
add_executable(GSSS_DS2_B4_18 DataStructures/PriorityQueues/PriorityQueueCustomComparator.cpp)
add_executable(GSSS_DS2_B4_19 InterviewQuestions/PersonPriorityQueue.cpp)
add_executable(GSSS_DS2_B4_20 DataStructures/PriorityQueues/PriorityQueueArrayImplementation.cpp)
add_executable(GSSS_DS2_B4_21 DataStructures/PriorityQueues/PriorityQueueUsingLinkedList.cpp)
add_executable(GSSS_DS2_B4_22 InterviewQuestions/SquareRootUsingBinarySearch.cpp)
add_executable(GSSS_DS2_B4_23 DataStructures/HeapImplementationUsingArray.cpp)
add_executable(GSSS_DS2_B4_24 DataStructures/Graphs/GraphAdjMat.cpp)
add_executable(GSSS_DS2_B4_25 DataStructures/Graphs/AdjacencyList.cpp)
add_executable(GSSS_DS2_B4_26 DataStructures/Graphs/GraphInterviewQuestions/QuestionOne.cpp)
add_executable(GSSS_DS2_B4_27 DataStructures/Graphs/Traversal/DFSTraversal.cpp)
add_executable(GSSS_DS2_B4_28 DataStructures/Graphs/Traversal/BFSTraversal.cpp)
add_executable(GSSS_DS2_B4_29 DP/Memoization.cpp)
add_executable(GSSS_DS2_B4_30 DP/Tabulation.cpp)
add_executable(GSSS_DS2_B4_31 DP/SpaceOptimization.cpp)